stylesheets/components/app-switcher.scss
@import 'app-switcher-assets';

$app-switcher: () !default;
$app-switcher-default-settings: (
  icon-width: 48px,

  apps: (
    pistachio: #cddc47,
    phoenix: #f26e24,
    reporting: #1f75cf,
    dragon: #50c237
  )
);

$app-switcher: map-merge-settings($app-switcher-default-settings, $app-switcher);

@function app-switcher-settings($setting, $property: null) {
  @if $property {
    @return map-get(map-get($app-switcher, $setting), $property),
  } @else {
    @return map-get($app-switcher, $setting)
  }
}

@mixin app-switcher-icon(
  $app,
  $background-color: primary,
  $width: app-switcher-settings(icon-width)
) {
  $background-color: color($background-color);
  $dark-background-color: saturate($background-color, 10%);

  background: linear-gradient(to right, $dark-background-color, $background-color);
  border-radius: $global-radius;
  display: block;
  height: $width;
  margin: $column-gutter auto $column-gutter / 2;
  position: relative;
  width: $width;

  &:after {
    @extend %app-switcher-#{$app}-icon;

    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-size: $width $width;
    content: ' ';
    height: $width;
    left: 0;
    position: absolute;
    top: 0;
    width: $width;
  }

  &:hover {
    background: linear-gradient(to right, $background-color, $dark-background-color);
  }
}

@mixin app-switcher-icons {
  @each $app, $background-color in app-switcher-settings(apps) {
    &.#{$app} {
      > a > i {
        @include app-switcher-icon($app, $background-color);
      }
    }
  }
}

%app-switcher-label {
  color: color(text, small);
  display: block;
  font-size: $small-font-size;
  font-weight: $font-weight-bold;
  margin-bottom: $column-gutter / 2;
  text-align: center;
  text-transform: uppercase;

  &:hover {
    color: color(text);
  }
}


@include exports('paint-app-switcher') {
  %app-switcher-list {
    > ul {
      @extend %grid-row;

      white-space: nowrap;

      > li {
        @include app-switcher-icons;

        text-align: center;
        display: inline-block;

        &:not(:last-child) {
          padding-right: $column-gutter;
        }

        > span,
        a > span {
          @extend %app-switcher-label;
        }
      }
    }
  }

  .app-switcher {
    @include modal($use-content-size: true);

    > div {
      > header {
        text-align: center;
      }

      > .content {
        @extend %app-switcher-list;

        padding: 0 $column-gutter;
      }
    }
  }
}

